--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "email-validator": "^2.0.4",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
+    "mobx-react": "^7.5.0",
     "moment": "^2.29.3",
+    "paginate-array": "^2.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-daterangepicker": "^7.0.0",
@@ -25,6 +27,7 @@
     "react-day-picker": "^8.0.5",
     "react-dom": "^18.1.0",
     "react-moment": "^1.1.2",
+    "react-paginate": "^8.1.3",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
